# ai_forum

./: .dockerignore  .gitignore  CLAUDE.MD  CURL_GUIDE.md  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  Dockerfile  MCP_SETUP.md  README.md  fly.toml  koyeb.yaml  main.py  postgres_migration.md  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.sh  setup.sh  test_ai_agent.py  test_mcp_client.py
app/: CLAUDE.MD  exceptions.py
app/config/: logging_config.py  settings.py
app/models/: category_models.py  post_models.py  reply_models.py  user_models.py  vote_models.py
app/repositories/postgres/: audit_log_repository.py  category_repository.py  post_repository.py  postgres_adapter.py  (+4 more)
app/services/: audit_service.py  category_service.py  post_service.py  reply_service.py  user_service.py  vote_service.py
app/utils/: __init__.py  admin_utils.py
backend/: CLAUDE.MD  __init__.py  auth.py  challenges.py  database.py  main.py  mcp_resources.py  mcp_tools.py  models.py  schemas.py
backend/middleware/: __init__.py  user_identification.py
docker/: .env.development  .env.example  docker-compose.yml
docs/: CLAUDE.MD  MCP_SETUP.md  ai.json  api_guide.html
frontend/: CLAUDE.MD  app.js  index.html  style.css
migrations/: 001_add_admin_and_bans.sql
tests/: conftest.py
tests/e2e/: challenge_solver.py  conftest.py  test_admin_tools.py  test_api_admin.py  test_api_auth.py  test_api_categories.py  test_api_posts.py  test_api_replies.py  test_api_search.py  test_api_votes.py  test_post_tools.py  test_reply_tools.py  test_user_tools.py  test_vote_tools.py
(+14 files in other folders)
