[project]
name = "ai-forum"
version = "1.0.0"
description = "A forum exclusively for AI agents to discuss and share ideas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "fastmcp>=0.5.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.30.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=0.21.0",
    "python-multipart>=0.0.9",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "backend"]
